--- a/personal-info.html
+++ b/personal-info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Personal Info</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,9 +14,9 @@
      <!-- Navigation Bar -->
      <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/personal-info.html">Personal Info</a></li>
-            <li><a href="/skills.html">Skills</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="personal-info.html">Personal Info</a></li>
+            <li><a href="skills.html">Skills</a></li>
             
         </ul>
     </nav>
@@ -25,7 +25,7 @@
         <div class="about-me">
             <h1 class="about-header">About Me</h1>
             <figure>
-                <img src="/IMG_1531.JPG" alt="A locally stored image" style="border: 2px solid #555; width:200px ; height: 300px; ; ">
+                <img src="IMG_1531.JPG" alt="A locally stored image" style="border: 2px solid #555; width:200px ; height: 300px; ; ">
                 <figcaption>My Local Image</figcaption>
             </figure>
             <p>
