--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hobbies</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
      <!-- Navigation Bar -->
      <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/personal-info.html">Personal Info</a></li>
-            <li><a href="/skills.html">Skills</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="personal-info.html">Personal Info</a></li>
+            <li><a href="skills.html">Skills</a></li>
             
         </ul>
     </nav>
