--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rhythm's Homepage</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS file -->
 </head>
@@ -50,7 +51,7 @@
                     <figcaption>My Local Image</figcaption>
                 </figure>
                 <figure>
-                    <img src="https://scontent.fdac14-1.fna.fbcdn.net/v/t39.30808-6/243154640_1250785232033236_3412073369884261872_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeG8ja8QZbouOffFc8gf_R5qNuZXFc33qCc25lcVzfeoJ5DPRR7P2WOtcyOYIsAL3knLMwQgA401vhxn5SpDgs7Q&_nc_ohc=3Es3Bpjs5X4Q7kNvgEy92dJ&_nc_zt=23&_nc_ht=scontent.fdac14-1.fna&_nc_gid=AMKN4_KO_ldXvYIFS9kWl3F&oh=00_AYCPD3J4oMyDiaGkABXBHsc6VYu3Zz2C0OVebH2asTixpA&oe=674ADF27" alt="An online image">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="An online image">
                     <figcaption>My Online Image</figcaption>
                 </figure>
 
